Added game controller
